--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^10.1.0",
+    "autoprefixer": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
-    "rimraf": "^3.0.2"
+    "parcel-plugin-imagemin": "^4.0.2",
+    "rimraf": "^3.0.2",
+    "sass": "^1.30.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "http-server": "^0.12.3"
   }
 }
